# comfyui_remove_background

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
src/comfyui_remove_background/: nodes.py
tests/: __init__.py  conftest.py
