[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_remove_background"
version = "0.0.1"
description = "Custom ComfyUI node for background removal in images. Built with ONNX models and Pillow (PIL)."
authors = [
  {name = "ComfyUI Background Removal", email = "l33tdev.marcinkowski@gmail.com"}
]
readme = "README.md"
license = {text = "BSD license"}
requires-python = ">=3.10"
classifiers = []
dependencies = [

]



[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
Repository = "https://github.com/d3cker/comfyui_remove_background"
BugTracker = "https://github.com/d3cker/comfyui_remove_background/issues"
Documentation = "https://github.com/d3cker/comfyui_remove_background/wiki"


[tool.comfy]
PublisherId = "d3cker"
DisplayName = "ComfyUI Background Removal"
Icon = ""
Tags = []
Repository = "https://github.com/d3cker/comfyui_remove_background"

includes = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
